<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CallApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="number">Number</string>
    <string name="number_summary">Enter number</string>
    <string name="billing_title">Billing type</string>
    <string name="billing_summary">Enter your billing type</string>
    <string name="buttonUpdText">Update</string>
    <string name="billing">Billing Type</string>
    <string name="phNumber">phNumber</string>
    <string name="type_title">Type of calls</string>
    <string name="type_summary">Enter your type of calls</string>
    <string name="type">Type</string>

</resources>